// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<script> after <script setup> the script content not end with \`\\n\` 1`] = `
"import { x } from './x'
  const n = 1

export default defineComponent({
  setup(__props) {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

  
return (): any | null => { return null }
}

})"
`;

exports[`defineExpose() 1`] = `
"export default defineComponent({
  setup(__props, { expose: __expose }: SetupContext) {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

__expose({ foo: 123 })

return (): any | null => { return null }
}

})"
`;
